# rust_atcoder

./: Cargo.toml  README.md
contests/: compete.toml
mayocon/2022-1012/: Cargo.toml
mayocon/2022-1012/testcases/: 0.yml  1.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml
src/: main
utils/: 2進数変換.rs  再帰関数.rs  各桁の値取得
virtual_contest/: compete.toml
virtual_contest/6d4ca2a5-4d9d-4265-afd9-c6588ae2566b/: Cargo.toml
virtual_contest/6d4ca2a5-4d9d-4265-afd9-c6588ae2566b/testcases/: 18.yml
virtual_contest/a83f9f2e-a723-4274-9f8d-7bb5af08eead/: Cargo.toml
virtual_contest/a83f9f2e-a723-4274-9f8d-7bb5af08eead/testcases/: 0.yml  1.yml
virtual_contests/: compete.toml
virtual_contests/6d4ca2a5-4d9d-4265-afd9-c6588ae2566b/testcases/: 0.yml  1.yml  11.yml  12.yml  13.yml  14.yml  19.yml  9.yml
virtual_contests/doer0929/: Cargo.toml
virtual_contests/doer0929/testcases/: 0.yml  1.yml  10.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml  8.yml  9.yml
virtual_contests/doer20221020/: Cargo.toml
virtual_contests/doer20221020/testcases/: 0.yml  1.yml  10.yml  11.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml  8.yml  9.yml
virtual_contests/easy/: Cargo.toml
virtual_contests/easy/testcases/: 10.yml  15.yml  16.yml  17.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml  8.yml
virtual_contests/expert/: Cargo.toml
virtual_contests/expert/testcases/: 0.yml  1.yml  10.yml  11.yml  12.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml  8.yml  9.yml
virtual_contests/hard/: Cargo.toml
virtual_contests/hard/testcases/: 0.yml  1.yml  2.yml  3.yml  4.yml  5.yml  6.yml
virtual_contests/normal/: Cargo.toml
virtual_contests/normal/testcases/: 0.yml  1.yml  10.yml  11.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml  8.yml  9.yml
