[package]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-0 = { alias = "0", problem = "https://atcoder.jp/contests/arc059/tasks/arc059_a" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-1 = { alias = "1", problem = "https://atcoder.jp/contests/abc060/tasks/arc073_a" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-10 = { alias = "10", problem = "https://atcoder.jp/contests/abc106/tasks/abc106_c" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-11 = { alias = "11", problem = "https://atcoder.jp/contests/abc066/tasks/arc077_a" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-12 = { alias = "12", problem = "https://atcoder.jp/contests/abc064/tasks/abc064_c" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-2 = { alias = "2", problem = "https://atcoder.jp/contests/abc048/tasks/abc048_b" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-3 = { alias = "3", problem = "https://atcoder.jp/contests/abc109/tasks/abc109_c" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-4 = { alias = "4", problem = "https://atcoder.jp/contests/abc118/tasks/abc118_c" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-5 = { alias = "5", problem = "https://atcoder.jp/contests/abc103/tasks/abc103_c" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-6 = { alias = "6", problem = "https://atcoder.jp/contests/abc240/tasks/abc240_c" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-7 = { alias = "7", problem = "https://atcoder.jp/contests/abc117/tasks/abc117_c" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-8 = { alias = "8", problem = "https://atcoder.jp/contests/abc101/tasks/arc099_a" }
contest87da4c2e-504e-4a92-9211-7dbb54c394c2-9 = { alias = "9", problem = "https://atcoder.jp/contests/abc061/tasks/abc061_c" }

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-0"
path = "src/bin/0.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-1"
path = "src/bin/1.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-10"
path = "src/bin/10.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-11"
path = "src/bin/11.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-12"
path = "src/bin/12.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-2"
path = "src/bin/2.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-3"
path = "src/bin/3.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-4"
path = "src/bin/4.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-5"
path = "src/bin/5.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-6"
path = "src/bin/6.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-7"
path = "src/bin/7.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-8"
path = "src/bin/8.rs"

[[bin]]
name = "contest87da4c2e-504e-4a92-9211-7dbb54c394c2-9"
path = "src/bin/9.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]
