[package]
name = "contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-0 = { alias = "0", problem = "https://atcoder.jp/contests/abc182/tasks/abc182_b" }
contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-1 = { alias = "1", problem = "https://atcoder.jp/contests/abc050/tasks/abc050_b" }
contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-2 = { alias = "2", problem = "https://atcoder.jp/contests/abc098/tasks/abc098_b" }
contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-3 = { alias = "3", problem = "https://atcoder.jp/contests/abc102/tasks/abc102_b" }
contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-4 = { alias = "4", problem = "https://atcoder.jp/contests/abc261/tasks/abc261_b" }
contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-5 = { alias = "5", problem = "https://atcoder.jp/contests/abc265/tasks/abc265_b" }
contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-6 = { alias = "6", problem = "https://atcoder.jp/contests/abc262/tasks/abc262_b" }

[[bin]]
name = "contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-0"
path = "src/bin/0.rs"

[[bin]]
name = "contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-1"
path = "src/bin/1.rs"

[[bin]]
name = "contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-2"
path = "src/bin/2.rs"

[[bin]]
name = "contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-3"
path = "src/bin/3.rs"

[[bin]]
name = "contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-4"
path = "src/bin/4.rs"

[[bin]]
name = "contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-5"
path = "src/bin/5.rs"

[[bin]]
name = "contest90a6c4bb-0d6a-4e6b-85ea-852f6eaab746-6"
path = "src/bin/6.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]
