[package]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-0 = { alias = "0", problem = "https://atcoder.jp/contests/abc187/tasks/abc187_a" }
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-1 = { alias = "1", problem = "https://atcoder.jp/contests/abc261/tasks/abc261_a" }
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-10 = { alias = "10", problem = "https://atcoder.jp/contests/abc047/tasks/abc047_b" }
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-11 = { alias = "11", problem = "https://atcoder.jp/contests/abc089/tasks/abc089_b" }
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-2 = { alias = "2", problem = "https://atcoder.jp/contests/abc219/tasks/abc219_b" }
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-3 = { alias = "3", problem = "https://atcoder.jp/contests/abc213/tasks/abc213_b" }
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-4 = { alias = "4", problem = "https://atcoder.jp/contests/abc201/tasks/abc201_b" }
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-5 = { alias = "5", problem = "https://atcoder.jp/contests/abc218/tasks/abc218_b" }
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-6 = { alias = "6", problem = "https://atcoder.jp/contests/abc101/tasks/abc101_b" }
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-7 = { alias = "7", problem = "https://atcoder.jp/contests/abc086/tasks/abc086_b" }
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-8 = { alias = "8", problem = "https://atcoder.jp/contests/abc062/tasks/abc062_b" }
be8c9ad1-b128-4f16-9f41-e7a1f9309e29-9 = { alias = "9", problem = "https://atcoder.jp/contests/abc049/tasks/abc049_b" }

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-0"
path = "src/bin/0.rs"

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-1"
path = "src/bin/1.rs"

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-10"
path = "src/bin/10.rs"

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-11"
path = "src/bin/11.rs"

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-2"
path = "src/bin/2.rs"

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-3"
path = "src/bin/3.rs"

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-4"
path = "src/bin/4.rs"

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-5"
path = "src/bin/5.rs"

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-6"
path = "src/bin/6.rs"

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-7"
path = "src/bin/7.rs"

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-8"
path = "src/bin/8.rs"

[[bin]]
name = "be8c9ad1-b128-4f16-9f41-e7a1f9309e29-9"
path = "src/bin/9.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]
